# PolkaToken

./: Cargo.toml  lib.rs  package-lock.json  test.rs
contracts/caller/: Cargo.toml  lib.rs  test.rs
contracts/erc20/: Cargo.toml  lib.rs  test.rs
